--- a/homepage.css
+++ b/homepage.css
@@ -222,3 +222,9 @@ p i
     justify-content: space-between;
     margin: 20px 80px;
 }
+.end
+{
+    font-size: 15px;
+    Padding : 0Px;
+    Border: 0Px;
+}
