minor changes done

--- a/homepage.css
+++ b/homepage.css
@@ -8,12 +8,14 @@
 
 nav {
     background-color: #fff;
-    display: grid;
+    max-width: 1460px;
+    display: flex;
+    justify-content: space-between;
     padding: 10px;
-    margin: 10px 100px;
+    margin: 10px auto;
     align-items: center;
     /* border: 1px solid black; */
-    grid-template-columns: 200px 800px 300px;
+    /* grid-template-columns: 200px 800px 300px; */
 
 }
 
@@ -32,7 +34,6 @@ nav .logo {
     list-style: none;
     margin-left: 30px;
     font-size: 12px;
-
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -84,6 +85,7 @@ section
 {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 section div
 {
@@ -96,6 +98,8 @@ section div
     align-items: center;
     justify-content: center;
     margin: 80px 10px;
+    /* flex: 1 1 auto; */
+
   
 }
 section div:nth-child(2n)
